WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56595
1 Structure leaked beneath JSGlobalData::storeVPtrs()
https://bugs.webkit.org/show_bug.cgi?id=56595
Summary
1 Structure leaked beneath JSGlobalData::storeVPtrs()
Geoffrey Garen
Reported
2011-03-17 14:42:47 PDT
1 Structure leaked beneath JSGlobalData::storeVPtrs()
Attachments
Patch
(2.00 KB, patch)
2011-03-17 14:43 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2011-03-17 16:39 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(6.04 KB, patch)
2011-03-17 22:47 PDT
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-03-17 14:43:50 PDT
Created
attachment 86096
[details]
Patch
Darin Adler
Comment 2
2011-03-17 14:55:22 PDT
Comment on
attachment 86096
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86096&action=review
> Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:2641 > compatibilityVersion = "Xcode 3.1"; > - developmentRegion = English; > hasScannedForEncodings = 1;
Don’t land this part of the patch! Why are you using an older Xcode version?
Geoffrey Garen
Comment 3
2011-03-17 15:15:42 PDT
Committed
r81394
: <
http://trac.webkit.org/changeset/81394
>
WebKit Review Bot
Comment 4
2011-03-17 15:23:17 PDT
http://trac.webkit.org/changeset/81394
might have broken Windows Release (Build) and Windows Debug (Build)
Build Bot
Comment 5
2011-03-17 15:37:19 PDT
Attachment 86096
[details]
did not build on win: Build output:
http://queues.webkit.org/results/8192801
Geoffrey Garen
Comment 6
2011-03-17 16:38:10 PDT
Looks like my last patch was not a complete fix.
Geoffrey Garen
Comment 7
2011-03-17 16:39:54 PDT
Created
attachment 86111
[details]
Patch
Geoffrey Garen
Comment 8
2011-03-17 16:47:03 PDT
Committed
r81410
: <
http://trac.webkit.org/changeset/81410
>
Geoffrey Garen
Comment 9
2011-03-17 22:43:09 PDT
Still not quite fixed!
Geoffrey Garen
Comment 10
2011-03-17 22:47:45 PDT
Created
attachment 86137
[details]
Patch
Geoffrey Garen
Comment 11
2011-03-18 09:56:45 PDT
Committed
r81483
: <
http://trac.webkit.org/changeset/81483
>
WebKit Review Bot
Comment 12
2011-03-18 11:31:19 PDT
http://trac.webkit.org/changeset/81483
might have broken GTK Linux 32-bit Release The following tests are not passing: fast/reflections/inline-crash.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug