2011-03-17  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Darin Adler.

        1 Structure leaked beneath JSGlobalData::storeVPtrs()
        https://bugs.webkit.org/show_bug.cgi?id=56595

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * runtime/JSGlobalData.cpp:
        (JSC::JSGlobalData::storeVPtrs): Now that we have an executable, we need
        to explicitly run its destructor.


git-svn-id: svn://svn.chromium.org/blink/trunk@81394 bbb929c8-8fbe-4397-9dbb-9b2b20218538