third_party/WebKit/Source/JavaScriptCore/runtime/JSGlobalData.cpp
@@ -112,6 +112,7 @@ void JSGlobalData::storeVPtrs()
     VPtrHackExecutable* executable = new (executableStorage) VPtrHackExecutable(Structure::create(Structure::VPtrStealingHack, 0));
     JSCell* jsFunction = new (storage) JSFunction(Structure::create(Structure::VPtrStealingHack, &JSFunction::s_info), executable);
     JSGlobalData::jsFunctionVPtr = jsFunction->vptr();
+    executable->~JSCell();
     jsFunction->~JSCell();
 }
 
